--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -13,29 +13,32 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-dark bg-dark d-flex justify-content-end">
+        <button class="btn-ver-menu"><i class="fa fa-bars"></i></button>
+    </nav>
+
     <div class="navbar-left">
-        <div class="logo d-flex justify-content-center">
+        <div class="logo mt-2">
             <img src="/images/almacen.png" alt="logo" width="200px">
         </div>
         <ul class="menu">
-            <li><a href="/inventario">Inventario</a></li>
-            <li><a href="/personal">Personal</a></li>
-            <li><a href="/proveedores">Proveedores</a></li>
-            <li><a href="/unidades">Unidades</a></li>
+            <li><a href="/inventario" id="btn-inventario">Inventario</a></li>
+            <li><a href="/personal" id="btn-personal">Personal</a></li>
+            <li><a href="/proveedores" id="btn-proveedores">Proveedores</a></li>
+            <li><a href="/unidades" id="btn-unidades">Unidades</a></li>
         </ul>
     </div>
 
     <div id="div-modal"></div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <script src="./javascripts/layout/layout.js"></script>
     <script src="./javascripts/modal/modal.js"></script>
 </body>
 
