--- a/views/unidades.ejs
+++ b/views/unidades.ejs
@@ -1,11 +1,7 @@
 <%- include('layout'); -%>
 
-<div class="container">
-    <div class="jumbotron mt-4">
-        <div class="row">
-            <div class="col-lg-12">
-                <h1>Unidades</h1>
-            </div>
-        </div>
-    </div>
+<div class="container-fluid">
+    <div class="jumbotron mt-4" id="jumbotron-unidad"></div>
 </div>
+
+<script src="/javascripts/unidades/bundle.js"></script>
