--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -21,11 +21,12 @@
         <div class="logo mt-2">
             <img src="/images/almacen.png" alt="logo" width="200px">
         </div>
+        <div class="titulo-menu"><a href="#">Menu</a></div>
         <ul class="menu">
-            <li><a href="/inventario" id="btn-inventario">Inventario</a></li>
-            <li><a href="/personal" id="btn-personal">Personal</a></li>
-            <li><a href="/proveedores" id="btn-proveedores">Proveedores</a></li>
-            <li><a href="/unidades" id="btn-unidades">Unidades</a></li>
+            <li><a href="/inventario" id="btn-inventario">Inventario <i class="fa fa-clipboard"></i></a></li>
+            <li><a href="/personal" id="btn-personal">Personal<i class="fa fa-users"></i></a></li>
+            <li><a href="/proveedores" id="btn-proveedores">Proveedores<i class="fa fa-box-open"></i></a></li>
+            <li><a href="/unidades" id="btn-unidades">Unidades<i class="fa fa-truck"></i></a></li>
         </ul>
     </div>
 
