add table devoluciones

--- a/views/inventario.ejs
+++ b/views/inventario.ejs
@@ -10,3 +10,6 @@
 <script src="/javascripts/inventario/listado_productos.js"></script>
 <script src="/javascripts/inventario/lista_almacen.js"></script>
 <script src="/javascripts/inventario/entradas.js"></script>
+<script src="/javascripts/inventario/salidas.js"></script>
+<script src="/javascripts/inventario/tabla_salidas.js"></script>
+<script src="/javascripts/inventario/tabla_devoluciones.js"></script>
