--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,6 +9,7 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="/stylesheets/layout.css">
     <link rel="stylesheet" href="/fonts/css/all.min.css">
+    <link rel="stylesheet" href="//cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css">
     <title>Document</title>
 </head>
 
@@ -41,6 +42,8 @@
         crossorigin="anonymous"></script>
     <script src="./javascripts/layout/layout.js"></script>
     <script src="./javascripts/modal/modal.js"></script>
+    <script src="//cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.11/lodash.min.js"></script>
 </body>
 
 </html>
