--- a/views/inventario.ejs
+++ b/views/inventario.ejs
@@ -12,4 +12,5 @@
 <script src="/javascripts/inventario/entradas.js"></script>
 <script src="/javascripts/inventario/salidas.js"></script>
 <script src="/javascripts/inventario/tabla_salidas.js"></script>
+<script src="/javascripts/inventario/devoluciones.js"></script>
 <script src="/javascripts/inventario/tabla_devoluciones.js"></script>
