--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -40,10 +40,16 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-    <script src="./javascripts/layout/layout.js"></script>
-    <script src="./javascripts/modal/modal.js"></script>
+    <script src="/javascripts/layout/layout.js"></script>
+    <script src="/javascripts/modal/modal.js"></script>
     <script src="//cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.11/lodash.min.js"></script>
+    <script src="/javascripts/excel.js"></script>
+    <script src="/javascripts/xlsx.js"></script>
+    <script src="/javascripts/blob.js"></script>
+    <script src="/javascripts/fileSaver.js"></script>
+    <script src="/javascripts/tableexport.js"></script>
+    <script src="/javascripts/format_table.js"></script>
 </body>
 
 </html>
