module unidad modified

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -20,7 +20,7 @@
 
     <div class="navbar-left">
         <div class="logo mt-2">
-            <img src="/images/almacen.png" alt="logo" width="200px">
+            <img src="/images/almacen.svg" alt="logo" width="200px">
         </div>
         <div class="titulo-menu"><a href="#">Menu</a></div>
         <ul class="menu">
