--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -4,6 +4,14 @@
     top: 50%;
     transform: translate(-50%, -50%);
     -webkit-transform: translate(-50%, -50%);
-    min-width: 450px;
-    padding: 20px;
+    min-width: 500px;
+    padding: 30px;
+    border-radius: 4px;
+    border: 1px solid #C9C9C9;
+    box-shadow: 9px 5px 12px 1px rgba(0, 0, 0, 0.3);
+}
+
+.logo {
+    display: flex;
+    justify-content: center;
 }
