--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,16 +14,19 @@
 <body>
 
 	<div class="login">
+		<div class="logo">
+			<img src="/images/logo.jpg" width="250">
+		</div>
 		<form action="/login" method="post">
 			<%if (msj === -1) { %>
-			<div class="alert alert-warning" role="alert">
-				Faltan datos
-			</div>
+				<div class="alert alert-warning" role="alert">
+					Faltan datos
+				</div>
 			<% } %>
 			<%if (msj === 0) { %>
-			<div class="alert alert-danger" role="alert">
-				El usuario no existe
-			</div>
+				<div class="alert alert-danger" role="alert">
+					El usuario no existe
+				</div>
 			<% } %>
 			<div class="form-group">
 				<label for="username">Username</label>
