--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -20,15 +20,17 @@
 
     <div class="navbar-left">
         <div class="logo mt-2">
-            <img src="/images/almacen.svg" alt="logo" width="200px">
+            <img src="/images/almacen.svg" alt="logo" width="150px">
         </div>
-        <div class="titulo-menu"><a href="#">Menu</a></div>
-        <ul class="menu">
-            <li><a href="/inventario" id="btn-inventario">Inventario <i class="fa fa-clipboard"></i></a></li>
-            <li><a href="/personal" id="btn-personal">Personal<i class="fa fa-users"></i></a></li>
-            <li><a href="/proveedores" id="btn-proveedores">Proveedores<i class="fa fa-box-open"></i></a></li>
-            <li><a href="/unidades" id="btn-unidades">Unidades<i class="fa fa-truck"></i></a></li>
-        </ul>
+        <div class="contenedor-menu">
+            <div class="titulo-menu"><a href="#">Menu</a></div>
+            <ul class="menu">
+                <li><a href="/inventario" id="btn-inventario">Inventario <i class="fa fa-clipboard"></i></a></li>
+                <li><a href="/personal" id="btn-personal">Personal<i class="fa fa-users"></i></a></li>
+                <li><a href="/proveedores" id="btn-proveedores">Proveedores<i class="fa fa-box-open"></i></a></li>
+                <li><a href="/unidades" id="btn-unidades">Unidades<i class="fa fa-truck"></i></a></li>
+            </ul>
+        </div>
     </div>
 
     <div id="div-modal"></div>
