add new features

--- a/views/inventario.ejs
+++ b/views/inventario.ejs
@@ -14,3 +14,4 @@
 <script src="/javascripts/inventario/tabla_salidas.js"></script>
 <script src="/javascripts/inventario/devoluciones.js"></script>
 <script src="/javascripts/inventario/tabla_devoluciones.js"></script>
+<script src="/javascripts/inventario/tabla_entradas.js"></script>
